Fix Windows build: Add missing vcpkg bootstrap executables and fix manifest mode
- Add tls12-download.exe and tls12-download-arm64.exe from vcpkg-tool 2025-12-05
- Fix occ-win-build.yml to use vcpkg manifest mode correctly
- Remove individual package install commands that conflict with manifest mode
- Dependencies will now be installed automatically during CMake configure

Fixes Windows build failures where vcpkg bootstrap was failing due to missing executables

--- a/.github/workflows/occ-win-build.yml
+++ b/.github/workflows/occ-win-build.yml
@@ -55,15 +55,10 @@ jobs:
     - name: Install Dependencies
       shell: pwsh
       run: |
-        Write-Host "=== Installing Dependencies via vcpkg ===" -ForegroundColor Cyan
-        & "$env:VCPKG_ROOT\vcpkg.exe" install `
-          boost-system:x64-windows `
-          boost-filesystem:x64-windows `
-          boost-program-options:x64-windows `
-          boost-thread:x64-windows `
-          boost-regex:x64-windows `
-          --recurse
-        Write-Host "Dependencies installed successfully" -ForegroundColor Green
+        Write-Host "=== Installing Dependencies via vcpkg (manifest mode) ===" -ForegroundColor Cyan
+        # vcpkg is in manifest mode, dependencies will be installed automatically during CMake configure
+        & "$env:VCPKG_ROOT\vcpkg.exe" version
+        Write-Host "vcpkg ready for manifest mode" -ForegroundColor Green
     
     - name: Configure CogUtil
       shell: pwsh
@@ -178,15 +173,10 @@ jobs:
     - name: Install Dependencies
       shell: pwsh
       run: |
-        Write-Host "=== Installing Dependencies via vcpkg ===" -ForegroundColor Cyan
-        & "$env:VCPKG_ROOT\vcpkg.exe" install `
-          boost-system:x64-windows `
-          boost-filesystem:x64-windows `
-          boost-program-options:x64-windows `
-          boost-thread:x64-windows `
-          boost-regex:x64-windows `
-          --recurse
-        Write-Host "Dependencies installed successfully" -ForegroundColor Green
+        Write-Host "=== Installing Dependencies via vcpkg (manifest mode) ===" -ForegroundColor Cyan
+        # vcpkg is in manifest mode, dependencies will be installed automatically during CMake configure
+        & "$env:VCPKG_ROOT\vcpkg.exe" version
+        Write-Host "vcpkg ready for manifest mode" -ForegroundColor Green
     
     - name: Configure AtomSpace
       shell: pwsh
@@ -310,15 +300,10 @@ jobs:
     - name: Install Dependencies
       shell: pwsh
       run: |
-        Write-Host "=== Installing Dependencies via vcpkg ===" -ForegroundColor Cyan
-        & "$env:VCPKG_ROOT\vcpkg.exe" install `
-          boost-system:x64-windows `
-          boost-filesystem:x64-windows `
-          boost-program-options:x64-windows `
-          boost-thread:x64-windows `
-          boost-regex:x64-windows `
-          --recurse
-        Write-Host "Dependencies installed successfully" -ForegroundColor Green
+        Write-Host "=== Installing Dependencies via vcpkg (manifest mode) ===" -ForegroundColor Cyan
+        # vcpkg is in manifest mode, dependencies will be installed automatically during CMake configure
+        & "$env:VCPKG_ROOT\vcpkg.exe" version
+        Write-Host "vcpkg ready for manifest mode" -ForegroundColor Green
     
     - name: Configure Moses
       shell: pwsh
