Fix wincog.yml: Use full path to vcpkg.exe for package installation
PROBLEM:
- vcpkg install commands failing with exit code 1
- Commands were calling 'vcpkg install' without full path
- vcpkg.exe not in PATH, needs explicit path reference

SOLUTION:
- Replace all 'vcpkg install' with '& "$env:VCPKG_ROOT\vcpkg.exe" install'
- Uses the VCPKG_ROOT environment variable pointing to monorepo vcpkg
- Ensures vcpkg.exe is found and executed correctly

CHANGES:
- Updated ~22 vcpkg install command references
- All now use: & "$env:VCPKG_ROOT\vcpkg.exe" install <package>
- Consistent with PowerShell best practices for executable invocation

IMPACT:
- vcpkg package installation will now succeed
- Dependencies will be installed correctly
- Build can proceed past dependency installation step

This completes the vcpkg monorepo integration for wincog.yml.

--- a/.github/workflows/wincog.yml
+++ b/.github/workflows/wincog.yml
@@ -79,7 +79,7 @@ jobs:
         
         # Install vcpkg dependencies
 
-        vcpkg install boost:x64-windows
+        & "$env:VCPKG_ROOT\vcpkg.exe" install boost:x64-windows
         
         Write-Host "✓ Dependencies installed" -ForegroundColor Green
         
@@ -198,7 +198,7 @@ jobs:
         
         # Install vcpkg dependencies
 
-        vcpkg install boost:x64-windows
+        & "$env:VCPKG_ROOT\vcpkg.exe" install boost:x64-windows
         
         # Python packages
         python -m pip install --upgrade pip
@@ -342,7 +342,7 @@ jobs:
         
         # Install vcpkg dependencies
 
-        vcpkg install boost:x64-windows
+        & "$env:VCPKG_ROOT\vcpkg.exe" install boost:x64-windows
         
         Write-Host "✓ Dependencies installed" -ForegroundColor Green
         
@@ -482,8 +482,8 @@ jobs:
         
         # Install vcpkg dependencies
 
-        vcpkg install boost:x64-windows
-        vcpkg install rocksdb:x64-windows
+        & "$env:VCPKG_ROOT\vcpkg.exe" install boost:x64-windows
+        & "$env:VCPKG_ROOT\vcpkg.exe" install rocksdb:x64-windows
         
         Write-Host "✓ Dependencies installed" -ForegroundColor Green
         
@@ -636,8 +636,8 @@ jobs:
         
         # Install vcpkg dependencies
 
-        vcpkg install boost:x64-windows
-        vcpkg install asio:x64-windows
+        & "$env:VCPKG_ROOT\vcpkg.exe" install boost:x64-windows
+        & "$env:VCPKG_ROOT\vcpkg.exe" install asio:x64-windows
         
         Write-Host "✓ Dependencies installed" -ForegroundColor Green
         
@@ -790,8 +790,8 @@ jobs:
         
         # Install vcpkg dependencies
 
-        vcpkg install boost:x64-windows
-        vcpkg install asio:x64-windows
+        & "$env:VCPKG_ROOT\vcpkg.exe" install boost:x64-windows
+        & "$env:VCPKG_ROOT\vcpkg.exe" install asio:x64-windows
         
         Write-Host "✓ Dependencies installed" -ForegroundColor Green
         
@@ -957,7 +957,7 @@ jobs:
         
         # Install vcpkg dependencies
 
-        vcpkg install boost:x64-windows
+        & "$env:VCPKG_ROOT\vcpkg.exe" install boost:x64-windows
         
         Write-Host "✓ Dependencies installed" -ForegroundColor Green
         
@@ -1097,7 +1097,7 @@ jobs:
         
         # Install vcpkg dependencies
 
-        vcpkg install boost:x64-windows
+        & "$env:VCPKG_ROOT\vcpkg.exe" install boost:x64-windows
         
         Write-Host "✓ Dependencies installed" -ForegroundColor Green
         
@@ -1250,7 +1250,7 @@ jobs:
         
         # Install vcpkg dependencies
 
-        vcpkg install boost:x64-windows
+        & "$env:VCPKG_ROOT\vcpkg.exe" install boost:x64-windows
         
         Write-Host "✓ Dependencies installed" -ForegroundColor Green
         
@@ -1417,8 +1417,8 @@ jobs:
         
         # Install vcpkg dependencies
 
-        vcpkg install boost:x64-windows
-        vcpkg install asio:x64-windows
+        & "$env:VCPKG_ROOT\vcpkg.exe" install boost:x64-windows
+        & "$env:VCPKG_ROOT\vcpkg.exe" install asio:x64-windows
         
         Write-Host "✓ Dependencies installed" -ForegroundColor Green
         
@@ -1584,7 +1584,7 @@ jobs:
         
         # Install vcpkg dependencies
 
-        vcpkg install boost:x64-windows
+        & "$env:VCPKG_ROOT\vcpkg.exe" install boost:x64-windows
         
         Write-Host "✓ Dependencies installed" -ForegroundColor Green
         
@@ -1751,7 +1751,7 @@ jobs:
         
         # Install vcpkg dependencies
 
-        vcpkg install boost:x64-windows
+        & "$env:VCPKG_ROOT\vcpkg.exe" install boost:x64-windows
         
         Write-Host "✓ Dependencies installed" -ForegroundColor Green
         
@@ -1891,8 +1891,8 @@ jobs:
         
         # Install vcpkg dependencies
 
-        vcpkg install boost:x64-windows
-        vcpkg install asio:x64-windows
+        & "$env:VCPKG_ROOT\vcpkg.exe" install boost:x64-windows
+        & "$env:VCPKG_ROOT\vcpkg.exe" install asio:x64-windows
         
         Write-Host "✓ Dependencies installed" -ForegroundColor Green
         
@@ -2058,8 +2058,8 @@ jobs:
         
         # Install vcpkg dependencies
 
-        vcpkg install boost:x64-windows
-        vcpkg install asio:x64-windows
+        & "$env:VCPKG_ROOT\vcpkg.exe" install boost:x64-windows
+        & "$env:VCPKG_ROOT\vcpkg.exe" install asio:x64-windows
         
         Write-Host "✓ Dependencies installed" -ForegroundColor Green
         
@@ -2266,8 +2266,8 @@ jobs:
         
         # Install vcpkg dependencies
 
-        vcpkg install boost:x64-windows
-        vcpkg install asio:x64-windows
+        & "$env:VCPKG_ROOT\vcpkg.exe" install boost:x64-windows
+        & "$env:VCPKG_ROOT\vcpkg.exe" install asio:x64-windows
         
         Write-Host "✓ Dependencies installed" -ForegroundColor Green
         
