--- a/opencog-debian/moses/debian/rules
+++ b/opencog-debian/moses/debian/rules
@@ -29,3 +29,7 @@ override_dh_clean:
 
 override_dh_auto_configure:
 	dh_auto_configure -- -DCONFDIR="/etc" -DCMAKE_LIBRARY_PATH=$(DEB_HOST_MULTIARCH) -DMAKE_BUILD_TYPE=Release
+
+override_dh_auto_test:
+# Skip tests during package build to avoid dependency issues
+@echo "Skipping tests during package build"
